--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div>
             <a href="tel:+79039999999">+7 903 999-99-99</a>
-            <button>Заказать звонок</button>
+            <button>ok</button>
         </div>
     </header>
 </body>
